--- a/index.html
+++ b/index.html
@@ -19,6 +19,28 @@
 
 <body>
 
+    <section id="product-grid">
+        <div id="product-element" class="product1">
+            <div class="overlay">
+                <div class="text">Hello World</div>
+            </div>
+        </div>
+        <div id="product-element" class="product2">
+            <div class="overlay">
+                <div class="text">Hello World</div>
+            </div>
+        </div>
+        <div id="product-element" class="product3">
+            <div class="overlay">
+                <div class="text">Hello World</div>
+            </div>
+        </div>
+        <div id="product-element" class="product4">
+            <div class="overlay">
+                <div class="text">Hello World</div>
+            </div>
+        </div>
+    </section>
 
 
 </body>
